test/error/E42.chigmod
{
	"dependencies": ["hi"],
	"graphs": 23
}
